# module-manager-v3

./: .env.example  .gitignore  AGENTS.md  BUG_HISTORY.md  FIX_NOTES.md  PROJECT_KNOWLEDGE.md  README.md  RELEASE_MANIFEST.md  docker-compose.yml  setup_terminal_utf8.ps1
docs/: CLIENT_VISUAL_QA.md  (+18 more)
v2-api/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
v2-api/alembic/: env.py
v2-api/alembic/versions/: 0001_initial_schema.py  0002_local_state_postgres_bridge.py  0003_photo_import_dedup_fields.py  0004_allow_five_construction_tasks.py
v2-api/app/: __init__.py  config.py  database.py  main.py  matching.py  models.py
v2-api/app/api/: __init__.py  router.py
v2-api/app/core/: config.py  rate_limit.py  request_id.py  responses.py  security.py  security_middleware.py
v2-api/app/db/: session.py
v2-api/app/schemas/: auth.py  export.py  project.py  review.py
v2-api/scripts/: backfill_construction_creator_names.py  migrate_json_to_postgres.py  migrate_photos_to_oss.py  recompute_photo_barcode_checks.py  rematch_unmatched_records.py  sync_json_state_photos_to_oss.py  sync_oss_photos_to_json_state.py
v2-api/tests/: conftest.py  test_account_store.py  test_api.py  test_backfill_construction_creator_names.py  test_ezcodes_sync.py  test_local_simulation.py  test_matching.py  test_miniprogram_api.py  test_photo_barcode_check.py  test_postgres_migration.py  test_project_board_cache.py  test_recompute_photo_barcode_checks.py  test_security.py  test_spreadsheet_import.py  test_state_repository.py  test_task_status.py  test_v21_data_rules.py
(+1170 files in other folders)
