[project]
name = "module-manager-v2-api"
version = "3.0.39"
description = "FastAPI backend for Module Replacement Project Manager V3.0.39"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "Pillow>=10.4.0",
    "zxing-cpp==3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
